// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders execution 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-kvZOFW gchTTx"
        >
          <a
            active={true}
            className="sc-hqyNC juXOEG"
            href="/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            active={false}
            className="sc-hqyNC kZJHpv"
            href="/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jWBwVP jXDqsr"
  >
    <div
      className="sc-brqgnP ccjrfS"
      style={
        Object {
          "width": "70vw",
        }
      }
    >
      <div
        className="sc-jAaTju gauvsM"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Solid...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <input
          className="sc-jDwBTQ iSYPrz"
          onChange={[Function]}
          placeholder="Filter..."
          type="text"
          value=""
        />
      </div>
      <div
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "backgroundColor": "#F5F8FA",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "userSelect": "none",
            "width": "100%",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "transform": "matrix(0.39, 0, 0, 0.39, 378.125, 371.29999999999995)",
              "transformOrigin": "top left",
            }
          }
        >
          <svg
            className="sc-gzVnrw gBGkHq"
            height={660}
            onClick={[Function]}
            onDoubleClick={[Function]}
            width={625}
          >
            <g>
              <g
                style={
                  Object {
                    "opacity": 0.2,
                  }
                }
              >
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,360C115,403,115,403,115,446"
                  >
                    <title>
                      sum_solid - sum_sq_solid
                    </title>
                  </path>
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,178C115,221,115,221,115,264"
                  >
                    <title>
                      load_num_csv - sum_solid
                    </title>
                  </path>
                </g>
              </g>
              <g
                style={
                  Object {
                    "opacity": 0.75,
                  }
                }
              />
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={458}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={479}
                >
                  sum_sq_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    sum_df: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={428}
                  />
                  <ellipse
                    cx={115}
                    cy={446}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={524}
                  />
                  <ellipse
                    cx={115}
                    cy={542}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={100}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={121}
                >
                  load_num_csv
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={160}
                  />
                  <ellipse
                    cx={115}
                    cy={178}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#DBE6EE"
                  pathLength={100}
                  rx={13}
                  ry={13}
                  stroke="#8A9BA8"
                  strokeDasharray="0 50 0"
                  strokeWidth={1}
                />
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#7D8C97"
                  pathLength={100}
                  rx={10}
                  ry={10}
                  stroke="#FFFFFF"
                  strokeWidth={2}
                />
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={276}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={167.4}
                  x={112}
                  y={297}
                >
                  sum_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    num: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={246}
                  />
                  <ellipse
                    cx={115}
                    cy={264}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={342}
                  />
                  <ellipse
                    cx={115}
                    cy={360}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sc-dnqmqq gDcGMW"
    >
      <div
        className="sc-gZMcBi bksKfm"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="sc-cMljjf ergilj"
      style={
        Object {
          "width": "30vw",
        }
      }
    >
      <div
        className="sc-eHgmQL cExWIO"
      >
        <a
          href="/pandas_hello_world/load_num_csv"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY khgIJN"
          >
            <span
              className="bp3-icon bp3-icon-diagram-tree"
              icon="diagram-tree"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="diagram-tree"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  diagram-tree
                </desc>
                <path
                  d="M15 8v3h-2V9H9v2H7V9H3v2H1V8a1 1 0 0 1 1-1h5V5h2v2h5a1 1 0 0 1 1 1zM1 12h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm12 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm-6 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zM7 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Info
          </div>
        </a>
        <a
          href="/pandas_hello_world/load_num_csv?types=true"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY jFgLi"
          >
            <span
              className="bp3-icon bp3-icon-manual"
              icon="manual"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="manual"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  manual
                </desc>
                <path
                  d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06.02.02.03.04.05.06.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26l-.01-12zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46v9.57zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46v10.11z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Types
          </div>
        </a>
      </div>
      <div>
        <div
          className="sc-kgoBCf igxmqw"
        />
        <h3
          className="sc-kAzzGY jYDBGE"
        >
          <a
            href="/pandas_hello_world/load_num_csv?types=true"
            onClick={[Function]}
          >
            Pipeline Types
          </a>
           &gt; 
          PandasDataFrame
        </h3>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Description
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              >
                <div
                  className="sc-jTzLTM FbleH"
                  onClick={[Function]}
                  style={
                    Object {
                      "maxHeight": 320,
                    }
                  }
                >
                  <div>
                    <div>
                      <p>
                        Two-dimensional size-mutable, potentially heterogeneous
    tabular data structure with labeled axes (rows and columns). See 
                        <a
                          href="http://pandas.pydata.org/"
                        >
                          http://pandas.pydata.org/
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Fields
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders pipeline page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;

exports[`renders pipeline solid page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-kvZOFW gchTTx"
        >
          <a
            active={true}
            className="sc-hqyNC juXOEG"
            href="/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            active={false}
            className="sc-hqyNC kZJHpv"
            href="/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jWBwVP jXDqsr"
  >
    <div
      className="sc-brqgnP ccjrfS"
      style={
        Object {
          "width": "70vw",
        }
      }
    >
      <div
        className="sc-jAaTju gauvsM"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Solid...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <input
          className="sc-jDwBTQ iSYPrz"
          onChange={[Function]}
          placeholder="Filter..."
          type="text"
          value=""
        />
      </div>
      <div
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "backgroundColor": "#F5F8FA",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "userSelect": "none",
            "width": "100%",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "transform": "matrix(0.39, 0, 0, 0.39, 378.125, 371.29999999999995)",
              "transformOrigin": "top left",
            }
          }
        >
          <svg
            className="sc-gzVnrw gBGkHq"
            height={660}
            onClick={[Function]}
            onDoubleClick={[Function]}
            width={625}
          >
            <g>
              <g
                style={
                  Object {
                    "opacity": 0.2,
                  }
                }
              >
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,360C115,403,115,403,115,446"
                  >
                    <title>
                      sum_solid - sum_sq_solid
                    </title>
                  </path>
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,178C115,221,115,221,115,264"
                  >
                    <title>
                      load_num_csv - sum_solid
                    </title>
                  </path>
                </g>
              </g>
              <g
                style={
                  Object {
                    "opacity": 0.75,
                  }
                }
              />
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={458}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={479}
                >
                  sum_sq_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    sum_df: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={428}
                  />
                  <ellipse
                    cx={115}
                    cy={446}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={524}
                  />
                  <ellipse
                    cx={115}
                    cy={542}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={100}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={121}
                >
                  load_num_csv
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={160}
                  />
                  <ellipse
                    cx={115}
                    cy={178}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#DBE6EE"
                  pathLength={100}
                  rx={13}
                  ry={13}
                  stroke="#8A9BA8"
                  strokeDasharray="0 50 0"
                  strokeWidth={1}
                />
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#7D8C97"
                  pathLength={100}
                  rx={10}
                  ry={10}
                  stroke="#FFFFFF"
                  strokeWidth={2}
                />
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={276}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={167.4}
                  x={112}
                  y={297}
                >
                  sum_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    num: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={246}
                  />
                  <ellipse
                    cx={115}
                    cy={264}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={342}
                  />
                  <ellipse
                    cx={115}
                    cy={360}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sc-dnqmqq gDcGMW"
    >
      <div
        className="sc-gZMcBi bksKfm"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="sc-cMljjf ergilj"
      style={
        Object {
          "width": "30vw",
        }
      }
    >
      <div
        className="sc-eHgmQL cExWIO"
      >
        <a
          href="/pandas_hello_world"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY jFgLi"
          >
            <span
              className="bp3-icon bp3-icon-diagram-tree"
              icon="diagram-tree"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="diagram-tree"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  diagram-tree
                </desc>
                <path
                  d="M15 8v3h-2V9H9v2H7V9H3v2H1V8a1 1 0 0 1 1-1h5V5h2v2h5a1 1 0 0 1 1 1zM1 12h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm12 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm-6 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zM7 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Info
          </div>
        </a>
        <a
          href="/pandas_hello_world?types=true"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY khgIJN"
          >
            <span
              className="bp3-icon bp3-icon-manual"
              icon="manual"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="manual"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  manual
                </desc>
                <path
                  d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06.02.02.03.04.05.06.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26l-.01-12zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46v9.57zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46v10.11z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Types
          </div>
        </a>
      </div>
      <div>
        <div
          className="sc-kgoBCf igxmqw"
        >
          Pipeline
        </div>
        <h3
          className="sc-kAzzGY jYDBGE"
        >
          pandas_hello_world
        </h3>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Description
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Contexts
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              >
                <div
                  className="sc-kEYyzF lnALwk sc-kGXeez fDgYil"
                >
                  <h4
                    className="sc-chPdSV jUtMzA"
                  >
                    default
                  </h4>
                  <code
                    className="sc-jKJlTe iEmlwG"
                  >
                    {
                    <div
                      className="sc-eNQAEJ fAbPPh"
                    >
                        
                      <span
                        className="sc-hMqMXs Wlxbq"
                      >
                        log_level
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#BF7326",
                            "fontWeight": 500,
                          }
                        }
                      >
                        ?
                      </span>
                      : 
                      <a
                        href="/?typeExplorer=String"
                        onClick={[Function]}
                      >
                        <code
                          className="sc-VigVT iLoJBN"
                        >
                          String
                        </code>
                      </a>
                    </div>
                    }
                  </code>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders type page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-kvZOFW gchTTx"
        >
          <a
            active={true}
            className="sc-hqyNC juXOEG"
            href="/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            active={false}
            className="sc-hqyNC kZJHpv"
            href="/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jWBwVP jXDqsr"
  >
    <div
      className="sc-brqgnP ccjrfS"
      style={
        Object {
          "width": "70vw",
        }
      }
    >
      <div
        className="sc-jAaTju gauvsM"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Solid...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <input
          className="sc-jDwBTQ iSYPrz"
          onChange={[Function]}
          placeholder="Filter..."
          type="text"
          value=""
        />
      </div>
      <div
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "backgroundColor": "#F5F8FA",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "userSelect": "none",
            "width": "100%",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "transform": "matrix(0.39, 0, 0, 0.39, 378.125, 371.29999999999995)",
              "transformOrigin": "top left",
            }
          }
        >
          <svg
            className="sc-gzVnrw gBGkHq"
            height={660}
            onClick={[Function]}
            onDoubleClick={[Function]}
            width={625}
          >
            <g>
              <g
                style={
                  Object {
                    "opacity": 0.2,
                  }
                }
              >
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,360C115,403,115,403,115,446"
                  >
                    <title>
                      sum_solid - sum_sq_solid
                    </title>
                  </path>
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,178C115,221,115,221,115,264"
                  >
                    <title>
                      load_num_csv - sum_solid
                    </title>
                  </path>
                </g>
              </g>
              <g
                style={
                  Object {
                    "opacity": 0.75,
                  }
                }
              />
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={458}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={479}
                >
                  sum_sq_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    sum_df: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={428}
                  />
                  <ellipse
                    cx={115}
                    cy={446}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={524}
                  />
                  <ellipse
                    cx={115}
                    cy={542}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={100}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={121}
                >
                  load_num_csv
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={160}
                  />
                  <ellipse
                    cx={115}
                    cy={178}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#DBE6EE"
                  pathLength={100}
                  rx={13}
                  ry={13}
                  stroke="#8A9BA8"
                  strokeDasharray="0 50 0"
                  strokeWidth={1}
                />
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#7D8C97"
                  pathLength={100}
                  rx={10}
                  ry={10}
                  stroke="#FFFFFF"
                  strokeWidth={2}
                />
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={276}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={167.4}
                  x={112}
                  y={297}
                >
                  sum_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    num: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={246}
                  />
                  <ellipse
                    cx={115}
                    cy={264}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={342}
                  />
                  <ellipse
                    cx={115}
                    cy={360}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sc-dnqmqq gDcGMW"
    >
      <div
        className="sc-gZMcBi bksKfm"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="sc-cMljjf ergilj"
      style={
        Object {
          "width": "30vw",
        }
      }
    >
      <div
        className="sc-eHgmQL cExWIO"
      >
        <a
          href="/pandas_hello_world/load_num_csv"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY jFgLi"
          >
            <span
              className="bp3-icon bp3-icon-diagram-tree"
              icon="diagram-tree"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="diagram-tree"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  diagram-tree
                </desc>
                <path
                  d="M15 8v3h-2V9H9v2H7V9H3v2H1V8a1 1 0 0 1 1-1h5V5h2v2h5a1 1 0 0 1 1 1zM1 12h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm12 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm-6 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zM7 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Info
          </div>
        </a>
        <a
          href="/pandas_hello_world/load_num_csv?types=true"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY khgIJN"
          >
            <span
              className="bp3-icon bp3-icon-manual"
              icon="manual"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="manual"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  manual
                </desc>
                <path
                  d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06.02.02.03.04.05.06.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26l-.01-12zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46v9.57zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46v10.11z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Types
          </div>
        </a>
      </div>
      <div>
        <div
          className="sc-kgoBCf igxmqw"
        >
          Pipeline
        </div>
        <h3
          className="sc-kAzzGY jYDBGE"
        >
          pandas_hello_world
        </h3>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Description
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            className="sc-kpOJdX goxjbg"
            onClick={[Function]}
          >
            Contexts
            <span
              className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            className="bp3-collapse"
            style={
              Object {
                "height": "auto",
                "overflowY": "visible",
                "transition": "none",
              }
            }
          >
            <div
              aria-hidden={false}
              className="bp3-collapse-body"
              style={
                Object {
                  "transform": "translateY(0)",
                  "transition": "none",
                }
              }
            >
              <div
                className="sc-dxgOiQ dPbrCh"
              >
                <div
                  className="sc-kEYyzF lnALwk sc-kGXeez fDgYil"
                >
                  <h4
                    className="sc-chPdSV jUtMzA"
                  >
                    default
                  </h4>
                  <code
                    className="sc-jKJlTe iEmlwG"
                  >
                    {
                    <div
                      className="sc-eNQAEJ fAbPPh"
                    >
                        
                      <span
                        className="sc-hMqMXs Wlxbq"
                      >
                        log_level
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#BF7326",
                            "fontWeight": 500,
                          }
                        }
                      >
                        ?
                      </span>
                      : 
                      <a
                        href="/?typeExplorer=String"
                        onClick={[Function]}
                      >
                        <code
                          className="sc-VigVT iLoJBN"
                        >
                          String
                        </code>
                      </a>
                    </div>
                    }
                  </code>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders type page 2`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  pandas_hello_world
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <div
          className="bp3-navbar-divider"
        />
        <div
          className="sc-kvZOFW gchTTx"
        >
          <a
            active={true}
            className="sc-hqyNC juXOEG"
            href="/pandas_hello_world/explore"
            onClick={[Function]}
          >
            Explore
          </a>
          <a
            active={false}
            className="sc-hqyNC kZJHpv"
            href="/pandas_hello_world/execute"
            onClick={[Function]}
          >
            Execute
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jWBwVP jXDqsr"
  >
    <div
      className="sc-brqgnP ccjrfS"
      style={
        Object {
          "width": "70vw",
        }
      }
    >
      <div
        className="sc-jAaTju gauvsM"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Solid...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
        <input
          className="sc-jDwBTQ iSYPrz"
          onChange={[Function]}
          placeholder="Filter..."
          type="text"
          value=""
        />
      </div>
      <div
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "backgroundColor": "#F5F8FA",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "userSelect": "none",
            "width": "100%",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "transform": "matrix(0.39, 0, 0, 0.39, 378.125, 371.29999999999995)",
              "transformOrigin": "top left",
            }
          }
        >
          <svg
            className="sc-gzVnrw gBGkHq"
            height={660}
            onClick={[Function]}
            onDoubleClick={[Function]}
            width={625}
          >
            <g>
              <g
                style={
                  Object {
                    "opacity": 0.2,
                  }
                }
              >
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,360C115,403,115,403,115,446"
                  >
                    <title>
                      sum_solid - sum_sq_solid
                    </title>
                  </path>
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <path
                    className="vx-link-vertical sc-htoDjs jbckmQ"
                    d="M115,178C115,221,115,221,115,264"
                  >
                    <title>
                      load_num_csv - sum_solid
                    </title>
                  </path>
                </g>
              </g>
              <g
                style={
                  Object {
                    "opacity": 0.75,
                  }
                }
              />
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={458}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={479}
                >
                  sum_sq_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    sum_df: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={428}
                  />
                  <ellipse
                    cx={115}
                    cy={446}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={524}
                  />
                  <ellipse
                    cx={115}
                    cy={542}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={100}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={223.2}
                  x={112}
                  y={121}
                >
                  load_num_csv
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={160}
                  />
                  <ellipse
                    cx={115}
                    cy={178}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#DBE6EE"
                  pathLength={100}
                  rx={13}
                  ry={13}
                  stroke="#8A9BA8"
                  strokeDasharray="0 50 0"
                  strokeWidth={1}
                />
                <ellipse
                  cx={430}
                  cy={100}
                  fill="#7D8C97"
                  pathLength={100}
                  rx={10}
                  ry={10}
                  stroke="#FFFFFF"
                  strokeWidth={2}
                />
              </g>
              <g
                onClick={[Function]}
                onDoubleClick={[Function]}
                opacity={1}
              >
                <rect
                  fill="#DBE6EE"
                  height={72}
                  stroke="#979797"
                  strokeWidth={1}
                  width={350}
                  x={100}
                  y={276}
                />
                <text
                  dominantBaseline="hanging"
                  fill="#222"
                  style={
                    Object {
                      "font": "30px \\"Source Code Pro\\", monospace",
                      "pointerEvents": "none",
                    }
                  }
                  width={167.4}
                  x={112}
                  y={297}
                >
                  sum_solid
                </text>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    num: PandasDataFrame
                  </title>
                  <rect
                    fill="#00B3A4"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={246}
                  />
                  <ellipse
                    cx={115}
                    cy={264}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
                <g
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <title>
                    result: PandasDataFrame
                  </title>
                  <rect
                    fill="#137CBD"
                    height={36}
                    stroke="#979797"
                    strokeWidth={1}
                    width={30}
                    x={100}
                    y={342}
                  />
                  <ellipse
                    cx={115}
                    cy={360}
                    fill="rgba(0, 0, 0, 0.3)"
                    rx={7}
                    ry={7}
                    stroke="white"
                    strokeWidth={1.5}
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sc-dnqmqq gDcGMW"
    >
      <div
        className="sc-gZMcBi bksKfm"
        onMouseDown={[Function]}
      />
    </div>
    <div
      className="sc-cMljjf ergilj"
      style={
        Object {
          "width": "30vw",
        }
      }
    >
      <div
        className="sc-eHgmQL cExWIO"
      >
        <a
          href="/pandas_hello_world/load_num_csv"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY khgIJN"
          >
            <span
              className="bp3-icon bp3-icon-diagram-tree"
              icon="diagram-tree"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="diagram-tree"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  diagram-tree
                </desc>
                <path
                  d="M15 8v3h-2V9H9v2H7V9H3v2H1V8a1 1 0 0 1 1-1h5V5h2v2h5a1 1 0 0 1 1 1zM1 12h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm12 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zm-6 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1zM7 0h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Info
          </div>
        </a>
        <a
          href="/pandas_hello_world/load_num_csv?types=true"
          onClick={[Function]}
        >
          <div
            className="sc-cvbbAY jFgLi"
          >
            <span
              className="bp3-icon bp3-icon-manual"
              icon="manual"
              style={
                Object {
                  "marginRight": 5,
                }
              }
            >
              <svg
                data-icon="manual"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  manual
                </desc>
                <path
                  d="M15.99 1.13c-.02-.41-.33-.77-.78-.87C12.26-.36 9.84.13 8 1.7 6.16.13 3.74-.36.78.26.33.35.03.72.01 1.13H0v12c0 .08 0 .17.02.26.12.51.65.82 1.19.71 2.63-.55 4.59-.04 6.01 1.57.02.03.06.04.08.06.02.02.03.04.05.06.04.03.09.04.13.07.05.03.09.05.14.07.11.04.23.07.35.07h.04c.12 0 .24-.03.35-.07.05-.02.09-.05.14-.07.04-.02.09-.04.13-.07.02-.02.03-.04.05-.06.03-.02.06-.03.08-.06 1.42-1.6 3.39-2.12 6.01-1.57.54.11 1.07-.21 1.19-.71.04-.09.04-.18.04-.26l-.01-12zM7 12.99c-1.4-.83-3.07-1.14-5-.93V1.96c2.11-.28 3.75.2 5 1.46v9.57zm7-.92c-1.93-.21-3.6.1-5 .93V3.42c1.25-1.26 2.89-1.74 5-1.46v10.11z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            Types
          </div>
        </a>
      </div>
      <div
        className="sc-kgoBCf igxmqw"
      />
      <h3
        className="sc-kAzzGY jYDBGE"
      >
        Pipeline Types
      </h3>
      <div>
        <div
          className="sc-kpOJdX goxjbg"
          onClick={[Function]}
        >
          Custom
          <span
            className="bp3-icon bp3-icon-chevron-down sc-cSHVUG fvtgDa"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 0 0-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0 0 12 5z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          className="bp3-collapse"
          style={
            Object {
              "height": "auto",
              "overflowY": "visible",
              "transition": "none",
            }
          }
        >
          <div
            aria-hidden={false}
            className="bp3-collapse-body"
            style={
              Object {
                "transform": "translateY(0)",
                "transition": "none",
              }
            }
          >
            <div
              className="sc-dxgOiQ dPbrCh"
            >
              <ul
                className="bp3-list"
              >
                <li
                  className="sc-ckVGcZ emzRpM"
                >
                  <a
                    href="/?typeExplorer=PandasDataFrame"
                    onClick={[Function]}
                  >
                    <code
                      className="sc-VigVT iLoJBN"
                    >
                      PandasDataFrame
                    </code>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-kpOJdX goxjbg"
          onClick={[Function]}
        >
          Generated
          <span
            className="bp3-icon bp3-icon-chevron-up sc-cSHVUG fvtgDa"
            icon="chevron-up"
          >
            <svg
              data-icon="chevron-up"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                chevron-up
              </desc>
              <path
                d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          className="bp3-collapse"
          style={
            Object {
              "height": undefined,
              "overflowY": undefined,
              "transition": undefined,
            }
          }
        >
          <div
            aria-hidden={false}
            className="bp3-collapse-body"
            style={
              Object {
                "transform": "translateY(-undefinedpx)",
                "transition": undefined,
              }
            }
          />
        </div>
      </div>
      <div>
        <div
          className="sc-kpOJdX goxjbg"
          onClick={[Function]}
        >
          Built-in
          <span
            className="bp3-icon bp3-icon-chevron-up sc-cSHVUG fvtgDa"
            icon="chevron-up"
          >
            <svg
              data-icon="chevron-up"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                chevron-up
              </desc>
              <path
                d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 0 0 1.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 0 0 .71-1.71z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          className="bp3-collapse"
          style={
            Object {
              "height": undefined,
              "overflowY": undefined,
              "transition": undefined,
            }
          }
        >
          <div
            aria-hidden={false}
            className="bp3-collapse-body"
            style={
              Object {
                "transform": "translateY(-undefinedpx)",
                "transition": undefined,
              }
            }
          />
        </div>
      </div>
      <h3
        className="bp3-heading"
      />
    </div>
  </div>,
]
`;

exports[`renders without error 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-frDJqD fufUhH"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;
